--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
-}
+@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
