Added theme variables

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,41 @@
 @import 'tailwindcss';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@theme {
+  --color-white: #f6f6f6;
+  --color-black: #333c4d;
+  --color-green: #22c55e;
+  --color-silver: #ffffff;
+  --color-peach: #ff8360;
+  --color-slight-gray: #9ca3af26;
+  --color-white-black-scheme: light-dark(
+    var(--color-white),
+    var(--color-black)
+  );
+  --color-black-white-scheme: light-dark(
+    var(--color-black),
+    var(--color-white)
+  );
+  --color-silver-charcoal-scheme: light-dark(
+    var(--color-silver),
+    var(--color-charcoal)
+  );
+}
+
+html {
+  margin: 0 auto;
+  scroll-behavior: smooth;
+  text-rendering: optimizeLegibility;
+  color: var(--color-black-white-scheme);
+  background-color: var(--color-white-black-scheme);
+}
+
+.light {
+  color-scheme: light;
+  color: var(--color-black-white-scheme);
+  background-color: var(--color-white-black-scheme);
+}
+
+.dark {
+  color-scheme: dark;
+  color: var(--color-black-white-scheme);
+  background-color: var(--color-white-black-scheme);
+}
