--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: 'Josefin Sans Variable', sans-serif;
+  font-family: 'Hanken Grotesk Variable', sans-serif;
 }
 
 html {
